--- a/src/shop-products.html
+++ b/src/shop-products.html
@@ -10,6 +10,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../bower_components/paper-button/paper-button.html">
+<link rel="import" href="../bower_components/bootstrap-pagination/bootstrap-pagination.html">
 <link rel="import" href="../bower_components/app-route/app-route.html">
 <link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="shop-products-data.html">
@@ -81,8 +82,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           app-route provides the name of the category.
         -->
         <app-route
-                route="[[route]]"
+                route="{{route}}"
                 pattern="/:products"
+                query-params="{{queryParams}}"
                 data="{{routeData}}"></app-route>
 
         <shop-category-data
@@ -93,14 +95,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         -->
         <shop-products-data
                 id="productData"
-                product-name="[[routeData.products]]"
+                product-name="[[queryParams.search]]"
                 products="{{products}}"
-                failure="{{failure}}"></shop-products-data>
-
-        <!--<shop-image-->
-        <!--alt="[[category.title]]"-->
-        <!--src="[[category.image]]"-->
-        <!--placeholder-img="[[category.placeholder]]" class="hero-image"></shop-image>-->
+                failure="{{failure}}"
+                items-per-page="{{itemsPerPage}}"
+                current-page="{{queryParams.page}}"></shop-products-data>
 
         <header>
             <h1>Search Results</h1>
@@ -110,8 +109,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <template is="dom-repeat" items="{{products}}">
                 <!--<template is="dom-repeat" items="{{_getListItems(category.items)}}">-->
                 <li>
-                    <!--found-->
-                    <a href$="[[_getItemHref(item)]]"><shop-list-item item="[[item]]"></shop-list-item></a>
+                    <!--found products-->
+                    <a href$="{{_getItemHref(item)}}"><shop-list-item item="{{item}}"></shop-list-item></a>
                 </li>
             </template>
         </ul>
@@ -120,6 +119,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           shop-network-warning shows a warning message when the items can't be rendered due
           to network conditions.
         -->
+        <bootstrap-pagination
+                center="true"
+                current-page="[[queryParams.page]]"
+                items-per-page="{{itemsPerPage}}"
+                search="[[queryParams.search]]"></bootstrap-pagination>
+
         <shop-network-warning
                 hidden$="[[!failure]]"
                 offline="[[offline]]"
@@ -134,12 +139,23 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             is: 'shop-products',
 
             properties: {
+                itemsPerPage:{
+                    type: Number,
+                    notify: true,
+                    reflectToAttribute:true,
+                    value: 12
+                },
 
-                product: Object,
+                products: {
+                    type: Array,
+                    notify: true
+                },
 
                 route: Object,
 
                 routeData: Object,
+
+                queryParams: Object,
 
                 visible: Boolean,
 
@@ -153,15 +169,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             },
 
 //      catData : this.$.categoryData,
-//
             observers: [
-                '_categoryChanged(product, visible)'
+                '_productsChanged(queryParams, products)'
             ],
 
             ready: function(){
-//        this.async(function () {
-//          this.visible = !this.visible;
-//        }, 2000);
+
             },
 
             _getListItems: function(items) {
@@ -172,7 +185,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             _getItemHref: function(item) {
                 // By returning null when `itemId` is undefined, the href attribute won't be set and
                 // the link will be disabled.
-//        return "#";
                 return item.idproducts ? ['/detail', item.dep_num, item.idproducts].join('/') : null;
             },
 
@@ -184,22 +196,33 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 return  '(' + quantity + ' ' + pluralizedQ + ')';
             },
 
-            _categoryChanged: function(category, visible) {
-                if (visible) {
-                    this.debounce('change-section', function() {
-                        // Notify the category and the page's title
-                        if(this.categoryName != null){
-                            this.$.categoryData.categoryName = this.categoryName;
-                        }
-                        if(category != null) {
-                            this.fire('change-section', {
-                                category: category.category,
-                                title: category.category_name
-                            });
-                        }
-                    });
+            _productsChanged: function(queryParams, products) {
 
-                }
+
+
+//                this.fire('change-section', {
+////                                category: category.category,
+////                                title: category.category_name
+//                });
+
+//                if (visible) {
+                    this.debounce('change-section', function() {
+                        this.fire('change-section', {
+//                                category: category.category,
+//                                title: category.category_name
+                        });
+//                        // Notify the category and the page's title
+//                        if(this.productName != null){
+//                            this.$.productData.productName = this.productName;
+//                        }
+//                        if(products != null) {
+//                            this.fire('change-section', {
+////                                category: category.category,
+////                                title: category.category_name
+//                            });
+//                        }
+                    });
+//                }
             },
 
             _tryReconnect: function() {
